--- a/config/supervisor/3-vnc.conf
+++ b/config/supervisor/3-vnc.conf
@@ -1,5 +1,5 @@
 [program:VNC]
-command=bash -c 'echo -n "$(jq --raw-output .password /data/options.json)" |vncpasswd -f > $HOME/.config/tigervnc/passwd && x0vncserver -PasswordFile $HOME/.config/tigervnc/passwd -display :0 -SecurityTypes=VncAuth'
+command=bash -c 'echo -n "$(jq --raw-output .password /data/options.json)" |vncpasswd -f > $HOME/.config/tigervnc/passwd && x0vncserver -PasswordFile $HOME/.config/tigervnc/passwd -display :0 -SecurityTypes=None'
 
 startsecs=0
 autorestart=unexpected
